# desafio-coorlab

./: RESULT.md
app/: run.sh
app/api/: pyproject.toml
app/api/src/: index.py
app/api/src/utils/: hoursToInt.py  moneyToFloat.py
app/client/: package-lock.json  package.json  vite.config.ts
app/client/src/: App.vue
app/client/src/components/: CalcTravelForm.vue
app/client/src/components/calc-travel-form/: CalcTravelForm.vue  CitySelector.vue  InvalidDataDialog.vue  Travel.ts
app/client/src/components/layout/: MainContent.vue  MenuNav.vue  NavMenu.vue
app/client/src/components/result-area/: ResultArea.vue  TravelResult.vue
app/client/src/components/ui/calendar/: Calendar.vue
app/client/src/components/ui/data-picker/: DataPicker.vue  index.ts
app/client/src/components/ui/date-picker/: DatePicker.vue
app/client/src/styles/: global.css
