[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bruno-Calasans <rbunogstsho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
dev = "uvicorn src.index:app --reload --port 3000"